--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,6 @@ name = "nacha"
 version = "0.1.0"
 edition = "2021"
 
-[[bin]]
-name = "nacha"
-path = "main.rs"
-
-
 [dependencies]
+env_logger = "0.9.0"
 log = "0.4.17"
