--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.58"
+clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9.0"
 log = "0.4.17"
