--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nacha"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Leejay Hsu <leejayhsu@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -16,3 +16,5 @@ anyhow = "1.0.58"
 clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9.0"
 log = "0.4.17"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
