--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 anyhow = "1.0.58"
+chrono = { version = "0.4.19", features = ["serde"] }
 clap = { version = "3.2.6", features = ["derive"] }
 env_logger = "0.9.0"
 log = "0.4.17"
