--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nacha"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = ["Leejay Hsu <leejayhsu@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -19,3 +19,4 @@ env_logger = "0.9.0"
 log = "0.4.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8.24"
