--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,10 @@ categories = ["command-line-utilities"]
 anyhow = "1.0.58"
 chrono = { version = "0.4.19", features = ["serde"] }
 clap = { version = "3.2.6", features = ["derive"] }
+crossterm = "0.23.2"
 env_logger = "0.9.0"
 log = "0.4.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.24"
+tui = { version = "0.18.0", features = ["crossterm"] }
