--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ log = "0.4.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.24"
+thousands = "0.2.0"
 tui = { version = "0.18.0", features = ["crossterm"] }
